welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ';' expected but 'else' found.
  } else {
    ^SnakeBuggle:14: error: Unmatched closing brace '}' ignored here
}
^